{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 50,
  "lineage": "7c7b6e1c-54c4-2405-2058-daf8bc4f3115",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "othm_jenkings_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d0a7f5b3e115a38",
            "arn": "arn:aws:ec2:us-east-1:125022369875:elastic-ip/eipalloc-03d0a7f5b3e115a38",
            "association_id": "eipassoc-00aa1968abdd26444",
            "domain": "vpc",
            "id": "eipalloc-03d0a7f5b3e115a38",
            "instance": "i-01609c507520057ae",
            "network_border_group": "us-east-1",
            "network_interface": "eni-098b7d68c14c3d456",
            "private_dns": "ip-10-0-1-49.ec2.internal",
            "private_ip": "10.0.1.49",
            "public_dns": "ec2-54-156-47-112.compute-1.amazonaws.com",
            "public_ip": "54.156.47.112",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-eip"
            },
            "tags_all": {
              "Name": "dev-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "125022369875",
            "id": "eipalloc-03d0a7f5b3e115a38",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "othm_jenkings_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-025d99823a4caad37",
            "arn": "arn:aws:ec2:us-east-1:125022369875:instance/i-01609c507520057ae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "othm-ssm-profile",
            "id": "i-01609c507520057ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-098b7d68c14c3d456"
              }
            ],
            "primary_network_interface_id": "eni-098b7d68c14c3d456",
            "private_dns": "ip-10-0-1-49.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.49",
            "public_ip": "54.156.47.112",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:125022369875:key/cb29ace0-6cf4-42d1-85c7-ef0728e22dd0",
                "throughput": 125,
                "volume_id": "vol-0b9b36d4bb55fb8d9",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0350ab7002d0a9660",
            "tags": {
              "Name": "othm-jenkings"
            },
            "tags_all": {
              "Name": "othm-jenkings"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa9e5a0501b9661c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "125022369875",
            "id": "i-01609c507520057ae",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.othm_ssm",
            "aws_iam_role.othm_ssm",
            "aws_security_group.othm_jenkings_sg",
            "aws_subnet.public_1a",
            "aws_vpc.othm_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125022369875:internet-gateway/igw-09d865b663ba6ded3",
            "id": "igw-09d865b663ba6ded3",
            "owner_id": "125022369875",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "othm-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "othm-igw"
            },
            "vpc_id": "vpc-048160f0073021b60"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "125022369875",
            "id": "igw-09d865b663ba6ded3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.othm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125022369875:route-table/rtb-080edb359941015ed",
            "id": "rtb-080edb359941015ed",
            "owner_id": "125022369875",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d865b663ba6ded3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "othm-public-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "othm-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-048160f0073021b60"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "125022369875",
            "id": "rtb-080edb359941015ed",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.othm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd336bcb9a0920c7",
            "region": "us-east-1",
            "route_table_id": "rtb-080edb359941015ed",
            "subnet_id": "subnet-0350ab7002d0a9660"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "125022369875",
            "id": "rtbassoc-0bd336bcb9a0920c7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1a",
            "aws_vpc.othm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "othm_jenkings_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125022369875:security-group/sg-0fa9e5a0501b9661c",
            "description": "Security group for jenkings ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa9e5a0501b9661c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "othm-jenkings-sg",
            "name_prefix": "",
            "owner_id": "125022369875",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "othm-jenkings-sg"
            },
            "tags_all": {
              "Name": "othm-jenkings-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-048160f0073021b60"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "125022369875",
            "id": "sg-0fa9e5a0501b9661c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.othm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125022369875:subnet/subnet-0350ab7002d0a9660",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0350ab7002d0a9660",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "125022369875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "othm-public-subnet-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "othm-public-subnet-1a"
            },
            "vpc_id": "vpc-048160f0073021b60"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "125022369875",
            "id": "subnet-0350ab7002d0a9660",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.othm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "othm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125022369875:vpc/vpc-048160f0073021b60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc7b1ce6699427bf",
            "default_route_table_id": "rtb-0ccb9b26e84a3b4f1",
            "default_security_group_id": "sg-00316b464a93c408a",
            "dhcp_options_id": "dopt-07330c46916f29fa0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-048160f0073021b60",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ccb9b26e84a3b4f1",
            "owner_id": "125022369875",
            "region": "us-east-1",
            "tags": {
              "Name": "othm"
            },
            "tags_all": {
              "Name": "othm"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "125022369875",
            "id": "vpc-048160f0073021b60",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}